Changelog
=========

3.0 - unreleased
----------------

- Declare package dependencies.
  [hannosch]

2.0.4 - December 29, 2008
-------------------------

- The new property 'startup_directory_method' was used without guard. Since
  old instances in a migrated db wouldn't have this property, this would
  effectively block editing of nearly all ATContentTypes objects in an upgraded
  db. Fixes reopened http://dev.plone.org/plone/ticket/8347. [smcmahon]

- Fixed catalog search call, it should get the query as keywords, not a dict.
  This makes ATRBW work with collective.solr.
  [fschulze]

2.0.3 - August 18, 2008
-----------------------

- Fixed missing project name from registerType method. This closes
  http://dev.plone.org/plone/ticket/8369.
  [garbas, hannosch]

- Fixed undefined name in startup_directory_method. This closes
  http://dev.plone.org/plone/ticket/8347.
  [hannosch]


2.0.2 - July 4, 2008
--------------------

- Re-enabling 'Remove reference' button so that in multiValue=False mode
  there's a way to actually unset a singly chosen reference. This was a
  feature regression introduced in Plone 3.0.x and until some other UI
  paradigm emerges, this should be there. This isn't a problem in
  multiValue mode, as the checkbox UI allows the disabling of any individual
  referenced objects. This fixes http://dev.plone.org/plone/ticket/6950.
  [andrewb]

- Remove bogus leading whitespace.
  [wichert]

- Added new property 'startup_directory_method'. It defines a
  method that, if available at the instance, will be used to obtain the
  path of the startup directory.
  [rsantos]

- Inserted references were not checked by default on Internet Explorer 7.
  This closes http://dev.plone.org/plone/ticket/7936.
  [hannosch]

- Added new property 'hide_inaccessible'. When set, it changes the widget
  behaviour in view mode so that it hides all the items from the list of
  references for which a user do not have the View permission